# Beacon-Windows

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: windows-build.yml
docs/: windows-plan.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Test.md  read_md.py  tauri.conf.json  诗韵小集.md
src-tauri/capabilities/: default.json
src-tauri/examples/: proxy_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: appserver.rs  codex.rs  config.rs  lib.rs
src-tauri/src/proxy/: mod.rs  server.rs  translator.rs
src/components/: ActivityCard.tsx  ActivityGroup.tsx  ApprovalDialog.tsx  BeaconLogo.tsx  ProviderManager.tsx  RightPanel.tsx  SessionSidebar.tsx  SettingsPanel.tsx
src/lib/: appserver.ts  providers.ts  settings.ts
