[package]
name = "beacon"
version = "0.1.0"
description = "Beacon for Windows"
authors = ["Casper"]
edition = "2021"

[lib]
name = "beacon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "sync", "io-util"] }
async-stream = "0.3.6"
futures-util = "0.3.32"
toml_edit = "0.25.12"
bytes = "1.12.0"
uuid = { version = "1.23.3", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
flate2 = "1.1.9"
tar = "0.4.46"
